# cmake-demo

./: .gitignore  CMakeLists.txt  README.md
include/: Version.h  Version.h.in
